Fix : Grid layout issue

--- a/ClientApp/public/css/style.css
+++ b/ClientApp/public/css/style.css
@@ -6,22 +6,14 @@
     color: inherit !important;
 }
 
+.bg-dark-transparent {
+    background: rgba(52, 58, 64, 0.4) !important;
+}
+
 .section-title{
     text-transform: capitalize;
     letter-spacing: 2px;
     margin:0;
-}
-
-.section-bg::before{
-    content: " ";
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: var(--dark);
-    opacity: 0.4;
-    z-index: -1;
 }
 
 .flex-100{
@@ -76,57 +68,57 @@
     cursor: pointer;
 }
 
-    .cbx span {
-        display: inline-block;
-        vertical-align: middle;
-        transform: translate3d(0, 0, 0);
-    }
+.cbx span {
+    display: inline-block;
+    vertical-align: middle;
+    transform: translate3d(0, 0, 0);
+}
 
-        .cbx span:first-child {
-            position: relative;
-            width: 18px;
-            height: 18px;
-            border-radius: 3px;
-            transform: scale(1);
-            vertical-align: middle;
-            border: 1px solid #9098A9;
-            transition: all 0.2s ease;
-        }
+.cbx span:first-child {
+    position: relative;
+    width: 18px;
+    height: 18px;
+    border-radius: 3px;
+    transform: scale(1);
+    vertical-align: middle;
+    border: 1px solid #9098A9;
+    transition: all 0.2s ease;
+}
 
-            .cbx span:first-child svg {
-                position: absolute;
-                top: 3px;
-                left: 2px;
-                fill: none;
-                stroke: #FFFFFF;
-                stroke-width: 2;
-                stroke-linecap: round;
-                stroke-linejoin: round;
-                stroke-dasharray: 16px;
-                stroke-dashoffset: 16px;
-                transition: all 0.3s ease;
-                transition-delay: 0.1s;
-                transform: translate3d(0, 0, 0);
-            }
+.cbx span:first-child svg {
+    position: absolute;
+    top: 3px;
+    left: 2px;
+    fill: none;
+    stroke: #FFFFFF;
+    stroke-width: 2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-dasharray: 16px;
+    stroke-dashoffset: 16px;
+    transition: all 0.3s ease;
+    transition-delay: 0.1s;
+    transform: translate3d(0, 0, 0);
+}
 
-            .cbx span:first-child:before {
-                content: "";
-                width: 100%;
-                height: 100%;
-                background: #506EEC;
-                display: block;
-                transform: scale(0);
-                opacity: 1;
-                border-radius: 50%;
-            }
+.cbx span:first-child:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #506EEC;
+    display: block;
+    transform: scale(0);
+    opacity: 1;
+    border-radius: 50%;
+}
 
-        .cbx span:last-child {
-            padding-left: 8px;
-        }
+.cbx span:last-child {
+    padding-left: 8px;
+}
 
-    .cbx:hover span:first-child {
-        border-color: #506EEC;
-    }
+.cbx:hover span:first-child {
+    border-color: #506EEC;
+}
 
 .inp-cbx:checked + .cbx span:first-child {
     background: #506EEC;
@@ -134,20 +126,20 @@
     animation: wave 0.4s ease;
 }
 
-    .inp-cbx:checked + .cbx span:first-child svg {
-        stroke-dashoffset: 0;
-    }
+.inp-cbx:checked + .cbx span:first-child svg {
+    stroke-dashoffset: 0;
+}
 
-    .inp-cbx:checked + .cbx span:first-child:before {
-        transform: scale(3.5);
-        opacity: 0;
-        transition: all 0.6s ease;
-    }
+.inp-cbx:checked + .cbx span:first-child:before {
+    transform: scale(3.5);
+    opacity: 0;
+    transition: all 0.6s ease;
+}
 
 @keyframes wave {
-    50% {
-        transform: scale(0.9);
-    }
+50% {
+    transform: scale(0.9);
+}
 }
 
 .loader {
